--- a/lab01.qmd
+++ b/lab01.qmd
@@ -4,15 +4,12 @@ format:
     html:        
         warning: true
         error: true
-    pdf:
-        warning: true
-        error: true
     ipynb:
         warning: true
         error: true
         code-annotation: below
-jupyter: julia-1.9
-format-links: [pdf]
+jupyter: julia-1.8
+format-links: []
 ---
 
 ::: {.content-visible when-format="ipynb"}
