--- a/lab01.qmd
+++ b/lab01.qmd
@@ -147,7 +147,7 @@ There is no shame in using Google, or other resources, for help when programming
 You are also highly encouraged to post on [Ed Discussion](https://us.edstem.org), though getting a response might be less immediate. Just be mindful that to get good answers, [you have to help people help you](https://stackoverflow.com/help/how-to-ask), and **make sure to give credit to any resources that were helpful**!
 
 
-## Exercises
+## Exercises (10 points)
 
 Use your understanding of Julia syntax to complete the following (hopefully short) exercises. Convert your completed notebook to a PDF and submit it to the Gradescope Assignment "Lab 1".
 
@@ -156,7 +156,7 @@ Use your understanding of Julia syntax to complete the following (hopefully shor
 - Evaluate all of your code cells, in order (using a `Run All` command). This will make sure all output is visible and that the code cells were evaluated in the correct order.
 - Tag each of the problems when you submit to Gradescope; a 10% penalty will be deducted if this is not done.
 
-### Exercise 1
+### Exercise 1 (3 points)
 
 Given two numeric arrays `x` and `y`, write a function to compute their dot product if they have equal length, and return an error if not (this is useful for debugging!). Use the following code as a starting point. 
 
@@ -194,7 +194,7 @@ Let's also make sure we get an error when the dimensions of the two vectors don'
 dot_product([1 2 3], [4 5])
 ```
 
-### Exercise 2
+### Exercise 2 (3 points)
 
 This problem involves implementing Newton's method for computing square roots; it was shamelessly copied from MIT's [Introduction to Computational Thinking](https://computationalthinking.mit.edu/Spring21/hw0/). You will use a `while` loop instead of the `for` loop shown above.
 
@@ -222,7 +222,7 @@ Use your `newton_sqrt` function to compute $\sqrt{2}$ to within a tolerance of $
 
 ```
 
-### Exercise 3: Making a Plot
+### Exercise 3: Making a Plot (3 points)
 
 Write a function to compute the square of an integer `x`. Evaluate this function for integers between $x=-5$ and $x=5$ and make a plot of the squared values (you can find a quick guide to making various types of plots [here](../tutorials/julia-plots.html)). Make sure to label your axes. 
 
@@ -232,7 +232,7 @@ Write a function to compute the square of an integer `x`. Evaluate this function
 
 ```
 
-## Export the Notebook 
+## Export and Submit the Notebook (1 point)
 
 The last step is to export the notebook for submission to Gradescope (this section won't be repeated going forward, but the steps are the same).
 
